update to modelt

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,4 @@
+include "socio-web"
 include "socio-core"
 include "socio-core-jaxrs"
 include "socio-services"
@@ -6,4 +7,4 @@ include "socio-model:socio-model-jpa"
 include "socio-model:socio-model-mongo"
 include "socio-integration:socio-client"
 include "socio-testsuite:socio-testsuite-model"
-include "socio-testsuite:socio-testsuite-client" 
+include "socio-testsuite:socio-testsuite-client"
